--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
       <!-- About Modal -->
       <div class="container mt-2">
-        <div class="row">
-          <div class="col-2">
+        <div class="row align-items-center">
+          <div class="col-2 order-1 order-sm-1">
             <button type="button" class="btn opBtn" id="opBtn">About</button>
             <div class="modal fade" id="myModal" role="dialog">
               <div class="modal-dialog">
@@ -104,10 +104,10 @@
               </div>
             </div>
           </div>
-          <div class="col-8">
+          <div class="col-8 order-3 order-sm-2">
             <div class="result" data-fruit="">Result window</div>
           </div>
-          <div class="col-2">
+          <div class="col-2 order-2 order-sm-3">
             <div id="mute-button" class="fas fa-volume-up muted"></div>
             <audio id="myAudio" autoplay loop muted>
               <source src="/audio/fruit_audio_clip.m4a" type="audio/mpeg" />
@@ -326,8 +326,8 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
