added assets link to images and video

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div>
                       <img
-                        src="/img/hey_bear_logo.png"
+                        src="assets/img/hey_bear_logo.png"
                         alt="Hey Bear Sensory Logo"
                         class="bear-logo"
                       />
@@ -111,7 +111,10 @@
           <div class="col-2 order-2 order-sm-3">
             <div id="mute-button" class="fas fa-volume-up muted"></div>
             <audio id="myAudio" autoplay loop muted>
-              <source src="/audio/fruit_audio_clip.m4a" type="audio/mpeg" />
+              <source
+                src="assets/audio/fruit_audio_clip.m4a"
+                type="audio/mpeg"
+              />
               Your browser does not support the audio element.
             </audio>
           </div>
@@ -175,7 +178,7 @@
                 aria-label="Close"
               ></button>
               <video id="winVideo" controls width="100%">
-                <source src="/video/win_movie.mp4" type="video/mp4" />
+                <source src="assets/video/win_movie.mp4" type="video/mp4" />
               </video>
             </div>
             <div class="modal-footer">
@@ -227,7 +230,7 @@
             <input
               type="image"
               alt="avocado image"
-              src="/img/avocado.png"
+              src="assets/img/avocado.png"
               class="items"
               data-fruit="avocado"
             />
@@ -236,7 +239,7 @@
             <input
               type="image"
               alt="banana image"
-              src="/img/banana.png"
+              src="assets/img/banana.png"
               class="items"
               data-fruit="banana"
             />
@@ -245,7 +248,7 @@
             <input
               type="image"
               alt="blueberry image"
-              src="/img/blueberry.png"
+              src="assets/img/blueberry.png"
               class="items"
               data-fruit="blueberry"
             />
@@ -256,7 +259,7 @@
             <input
               type="image"
               alt="lemon image"
-              src="/img/lemon.png"
+              src="assets/img/lemon.png"
               class="items"
               data-fruit="lemon"
             />
@@ -265,7 +268,7 @@
             <input
               type="image"
               alt="lime image"
-              src="/img/lime.png"
+              src="assets/img/lime.png"
               class="items"
               data-fruit="lime"
             />
@@ -274,7 +277,7 @@
             <input
               type="image"
               alt="orange image"
-              src="/img/orange.png"
+              src="assets/img/orange.png"
               class="items"
               data-fruit="orange"
             />
@@ -285,7 +288,7 @@
             <input
               type="image"
               alt="pineapple image"
-              src="/img/pineapple.png"
+              src="assets/img/pineapple.png"
               class="items"
               data-fruit="pineapple"
             />
@@ -294,7 +297,7 @@
             <input
               type="image"
               alt="raspberry image"
-              src="/img/raspberry.png"
+              src="assets/img/raspberry.png"
               class="items"
               data-fruit="raspberry"
             />
@@ -303,7 +306,7 @@
             <input
               type="image"
               alt="strawberry image"
-              src="/img/strawberry.png"
+              src="assets/img/strawberry.png"
               class="items"
               data-fruit="strawberry"
             />
