--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="lkajshdkjahsdjashd" />
+    <link
+      rel="icon"
+      href="/assets/screenshots/favicon/fav_icon.png"
+      type="image/x-icon"
+    />
     <title>Guess the fruit</title>
   </head>
   <body>
