tidy up to about modal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                           target="_blank"
                           >Hey Bear Sensory</a
                         ></span
-                      >where super cute and friendly characters promote
+                      >
+                      where super cute and friendly characters promote
                       happiness, movement, learning, visual tracking, sleep,
                       relaxation and more! Visit the Hey Bear website for more
                       details. Also, check out their multi-million times viewed
