--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       href="/assets/screenshots/favicon/fav_icon.png"
       type="image/x-icon"
     />
+    <!-- Page title -->
     <title>Guess the fruit</title>
   </head>
   <body>
@@ -40,7 +41,7 @@
         </div>
       </div>
       <!-- About Modal -->
-      <div class="container mt-2">
+      <div class="container">
         <div class="row align-items-center">
           <div class="col-2 order-1 order-sm-1">
             <button type="button" class="btn opBtn" id="opBtn">About</button>
@@ -117,7 +118,7 @@
             <div id="mute-button" class="fas fa-volume-up muted"></div>
             <audio id="myAudio" autoplay loop muted>
               <source
-                src="assets/audio/fruit_audio_clip.m4a"
+                src="/assets/audio/fruit_main_theme.mp3"
                 type="audio/mpeg"
               />
               Your browser does not support the audio element.
