--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="result" data-fruit="">Result window</div>
           </div>
           <div class="col-2 order-2 order-sm-3">
-            <div id="mute-button" class="fas fa-volume-up muted"></div>
+            <div id="mute-button" class="fas fa-volume-mute muted"></div>
             <audio id="myAudio" autoplay loop muted>
               <source
                 src="/assets/audio/fruit_main_theme.mp3"
