favicon link (experiment)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="/assets/screenshots/favicon/fav_icon.png"
+      href="https://i.ibb.co/NnmJmJq/fav-icon.png"
+      alt="fav-icon"
       type="image/x-icon"
     />
     <!-- Page title -->
