--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="https://i.ibb.co/NnmJmJq/fav-icon.png"
-      alt="fav-icon"
+      href="/assets/screenshots/favicon/fav_icon.png?"
       type="image/x-icon"
     />
     <!-- Page title -->
