removed mt-2 from about modal

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="/assets/screenshots/favicon/fav_icon.png?"
-      type="image/x-icon"
+      href="./assets/screenshots/favicon/fav_icon.png?"
+      type="image/png"
     />
     <!-- Page title -->
     <title>Guess the fruit</title>
