--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="col-2 order-2 order-sm-3">
             <div id="mute-button" class="fas fa-volume-mute muted"></div>
-            <audio id="myAudio" loop muted>
+            <audio id="myAudio" autoplay loop muted>
               <source
                 src="assets/audio/fruit-maintheme.mp3"
                 type="audio/mpeg"
