commenting/signposting sections more clearly

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           </div>
         </div>
       </div>
-      <!-- About Modal -->
+      <!-- Header elements -->
       <div class="container">
         <div class="row align-items-center">
+          <!-- About Modal -->
           <div class="col-2 order-1 order-sm-1">
             <button type="button" class="btn opBtn" id="opBtn">About</button>
             <div class="modal fade" id="myModal" role="dialog">
@@ -111,9 +112,11 @@
               </div>
             </div>
           </div>
+          <!-- Result window 'Select a Fruit' -->
           <div class="col-8 order-3 order-sm-2">
             <div class="result" data-fruit="">Result window</div>
           </div>
+          <!-- Mute button/sound on/off button-->
           <div class="col-2 order-2 order-sm-3">
             <div id="mute-button" class="fas fa-volume-mute muted"></div>
             <audio id="myAudio" autoplay loop muted>
