font size change to about button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row align-items-center">
           <!-- About Modal -->
           <div class="col-2 order-1 order-sm-1">
-            <button type="button" class="btn opBtn" id="opBtn">About</button>
+            <button type="button" class="opBtn" id="opBtn">About</button>
             <div class="modal fade" id="myModal" role="dialog">
               <div class="modal-dialog">
                 <div class="modal-content-1">
